@@ -108,31 +108,51 @@ public class PaperBootstrap {
                     tuicPort, hy2Port, realityPort, sni, host, publicKey);
 
             startDailyRestartThread(bin.toString(), configJson.toString());
-            // ===== 重启 sing-box =====
-    private static void restartSingBox(String singPath, String configPath) {
-        System.out.println("正在停止旧的 sing-box 进程...");
-        
-        // 1. 尝试优雅停止
-        try {
-            Runtime.getRuntime().exec("pkill -f sing-box").waitFor();
-            Thread.sleep(3000);
-        } catch (Exception e) {
-            System.err.println("停止 sing-box 失败: " + e.getMessage());
+           // ===== 重启 sing-box（先关闭旧进程，再启动新进程） =====
+private static void restartSingBox(String singboxPath, String configPath) {
+    try {
+        // 1) 优雅停止旧进程（如果存在）
+        if (singboxProcess != null && singboxProcess.isAlive()) {
+            System.out.println("⏳ 正在关闭旧的 sing-box (PID=" + singboxProcess.pid() + ") ...");
+            singboxProcess.destroy(); // 请求优雅退出
+            // 等待最多 3 秒让其退出
+            long waitUntil = System.currentTimeMillis() + 3000;
+            while (singboxProcess.isAlive() && System.currentTimeMillis() < waitUntil) {
+                try { Thread.sleep(200); } catch (InterruptedException ignored) { Thread.currentThread().interrupt(); break; }
+            }
+            if (singboxProcess.isAlive()) {
+                System.out.println("⚠ 旧 sing-box 未优雅退出，尝试强制终止...");
+                singboxProcess.destroyForcibly();
+                try { singboxProcess.waitFor(2000, TimeUnit.MILLISECONDS); } catch (Exception ignored) {}
+            }
+            System.out.println("✅ 旧 sing-box 已停止");
         }
 
-        // 2. 强制杀死残留
-        try {
-            Runtime.getRuntime().exec("pkill -9 -f sing-box").waitFor();
-        } catch (Exception ignored) {}
+        // 2) 启动新的 sing-box（不使用 nohup，不写日志文件）
+        System.out.println("🔄 启动新的 sing-box：" + singboxPath + " -c " + configPath);
+        ProcessBuilder pb = new ProcessBuilder("sh", "-c", singboxPath + " run -c " + configPath);
+        pb.redirectErrorStream(true); // 合并 stderr -> stdout，方便读取
+        singboxProcess = pb.start();
 
-        System.out.println("正在启动新的 sing-box 进程...");
-        
-        // 3. 启动新进程
-        try {
-            ProcessBuilder pb = new ProcessBuilder(singPath, "run", "-c", configPath);
-            pb.redirectOutput(new File("/tmp/singbox.log"));
-            pb.redirectErrorStream(true);
-            singboxProcess = pb.start();
+        System.out.println("✔ 新 sing-box 已启动，PID=" + singboxProcess.pid());
+
+        // 3) 后台线程读取并打印进程输出（直接打印到控制台，不写文件）
+        new Thread(() -> {
+            try (BufferedReader br = new BufferedReader(new InputStreamReader(singboxProcess.getInputStream()))) {
+                String line;
+                while ((line = br.readLine()) != null) {
+                    System.out.println("[sing-box] " + line);
+                }
+            } catch (IOException ioe) {
+                System.out.println("[sing-box] 输出读取异常: " + ioe.getMessage());
+            }
+        }, "singbox-output-reader").start();
+
+    } catch (Exception e) {
+        System.out.println("❌ 重启 sing-box 失败: " + e.getMessage());
+        e.printStackTrace();
+    }
+}
             
             System.out.println("sing-box 重启成功，PID: " + singboxProcess.pid());
         } catch (Exception e) {
